# multiple2SingleVolume

./: CMakeLists.txt  README.md
multi2SingleVolume/: CMakeLists.txt  multi2SingleVolume.py
multi2SingleVolume/code/: playing.py
